--- a/src/client/index.html
+++ b/src/client/index.html
@@ -24,13 +24,18 @@
     import {createApp, defineComponent, ref, reactive, inject, onMounted} from "https://cdn.jsdelivr.net/npm/vue@3/dist/vue.esm-browser.prod.min.js";
     import {createVuetify} from "https://cdn.jsdelivr.net/npm/vuetify@3/dist/vuetify.esm.min.js";
 
-    import {fetchExtend} from "https://esm.sh/gh/dojyorin/deno_simple_utility@v1.0.0/mod.universal.ts?bundle&target=esnext";
+    import {fetchExtend, base64Encode} from "https://esm.sh/gh/dojyorin/deno_simple_utility@v1.0.0/mod.universal.ts?bundle&target=esnext";
 
-    async function fetchDeploy(path, option){
-        return await fetchExtend(`https://openai-api-example.deno.dev${path}`, "json", {
-            ...option,
+    async function fetchApi(path, type, body){
+        const origin = "https://openai-api-example.deno.dev";
+
+        return await fetchExtend(`${origin}/${path}`, type, {
+            method: body ? "POST" : "GET",
+            body: body && JSON.stringify(body),
             headers: {
-                "Content-Type": "application/json"
+                ...body && {
+                    "Content-Type": "application/json"
+                }
             }
         });
     }
@@ -76,7 +81,7 @@
                 threads.push({
                     own: true,
                     type: "text",
-                    content: inputValue
+                    value: inputValue
                 });
 
                 input.value = "";
@@ -84,36 +89,26 @@
                 try{
                     switch(type.value){
                         case "chat": {
-                            const result = await fetchDeploy("/chat", {
-                                method: "POST",
-                                body: JSON.stringify([{
-                                    role: "user",
-                                    content: inputValue
-                                }])
+                            const result = await fetchApi("/chat", "text", {
+                                query: inputValue
                             });
 
                             threads.push({
                                 own: false,
                                 type: "text",
-                                content: result[0].message.content
-                                // content: inputValue
+                                value: result
                             });
                         } break;
 
                         case "image": {
-                            const result = await fetchDeploy("/image", {
-                                method: "POST",
-                                body: JSON.stringify({
-                                    prompt: inputValue,
-                                    size: "512x512",
-                                    n: 1
-                                })
+                            const result = await fetchApi("/image", "byte", {
+                                query: inputValue
                             });
 
                             threads.push({
                                 own: false,
                                 type: "picture",
-                                content: `data:image/png;base64,${result[0].b64_json}`
+                                value: `data:image/png;base64,${base64Encode(result)}`
                             });
                         } break;
 
@@ -188,8 +183,8 @@
                         </template>
 
                         <div class="d-flex" :style="thread.own ? 'margin-left:40%' : 'margin-right:40%'" :class="thread.own ? 'justify-end' : 'justify-start'">
-                            <span v-if="thread.type === 'text'">{{thread.content}}</span>
-                            <img v-else-if="thread.type === 'picture'" :src="thread.content" style="width: 100%;">
+                            <span v-if="thread.type === 'text'">{{thread.value}}</span>
+                            <img v-else-if="thread.type === 'picture'" :src="thread.value" style="width: 100%;">
                         </div>
 
                         <template v-if="thread.own" #append>
