update client view.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -27,9 +27,7 @@
     import {fetchExtend, base64Encode} from "https://esm.sh/gh/dojyorin/deno_simple_utility@v1.0.0/mod.universal.ts?bundle&target=esnext";
 
     async function fetchApi(path, type, body){
-        const origin = "https://openai-api-example.deno.dev";
-
-        return await fetchExtend(`${origin}/${path}`, type, {
+        return await fetchExtend(path, type, {
             method: body ? "POST" : "GET",
             body: body && JSON.stringify(body),
             headers: {
@@ -38,6 +36,17 @@
                 }
             }
         });
+    }
+
+    function displayContent(own, type, value){
+        const [h, m] = new Date().toLocaleTimeString().split(/:/);
+
+        return {
+            time: `${h}:${m}`,
+            own: own,
+            type: type,
+            value: value
+        };
     }
 
     const sfc_layout_header = defineComponent({
@@ -58,7 +67,7 @@
                     <v-btn icon="mdi-image-outline" value="image"></v-btn>
                 </v-btn-toggle>
 
-                <v-text-field hide-details single-line clearable density="compact" variant="solo" label="テキストを入力 (Alt+Enterで送信)" class="mx-3" @keyup.alt.enter.exact="requestApi()" v-model="input"></v-text-field>
+                <v-textarea no-resize hide-details single-line flat clearable density="compact" variant="solo" rows="1" class="mx-3" label="テキストを入力 (Alt+Enterで送信)" @keyup.alt.enter.exact="requestApi()" v-model="input"></v-textarea>
 
                 <v-btn flat density="comfortable" color="transparent" icon="mdi-send" @click="requestApi()"></v-btn>
             </v-footer>
@@ -78,11 +87,7 @@
                     return;
                 }
 
-                threads.push({
-                    own: true,
-                    type: "text",
-                    value: inputValue
-                });
+                threads.push(displayContent(true, "text", inputValue));
 
                 input.value = "";
 
@@ -93,11 +98,7 @@
                                 query: inputValue
                             });
 
-                            threads.push({
-                                own: false,
-                                type: "text",
-                                value: result
-                            });
+                            threads.push(displayContent(false, "text", result));
                         } break;
 
                         case "image": {
@@ -105,11 +106,7 @@
                                 query: inputValue
                             });
 
-                            threads.push({
-                                own: false,
-                                type: "picture",
-                                value: `data:image/png;base64,${base64Encode(result)}`
-                            });
+                            threads.push(displayContent(false, "picture", `data:image/png;base64,${base64Encode(result)}`));
                         } break;
 
                         default: break;
@@ -175,20 +172,30 @@
         template: /*html*/`
             <v-container>
                 <v-list>
-                    <v-list-item v-for="thread in threads" class="mb-8">
-                        <template v-if="!thread.own" #prepend>
-                            <v-avatar color="grey-lighten-1">
+                    <v-list-item v-for="{time, own, type, value} in threads" class="mb-8">
+                        <template v-if="!own" #prepend>
+                            <v-avatar color="grey">
                                 <v-icon color="white">mdi-account</v-icon>
                             </v-avatar>
                         </template>
 
-                        <div class="d-flex" :style="thread.own ? 'margin-left:40%' : 'margin-right:40%'" :class="thread.own ? 'justify-end' : 'justify-start'">
-                            <span v-if="thread.type === 'text'">{{thread.value}}</span>
-                            <img v-else-if="thread.type === 'picture'" :src="thread.value" style="width: 100%;">
-                        </div>
+                        <v-sheet class="d-flex" :style="own ? 'margin-left:40%' : 'margin-right:40%'" :class="own ? 'justify-end' : 'justify-start'">
+                            <v-card v-if="own" flat class="d-flex align-end">
+                                <v-card-text class="px-2 py-0">{{time}}</v-card-text>
+                            </v-card>
 
-                        <template v-if="thread.own" #append>
-                            <v-avatar color="grey-lighten-1">
+                            <v-card flat rounded="lg" variant="tonal" :color="own ? 'deep-purple-accent-4' : 'orange-darken-4'">
+                                <v-card-text v-if="type === 'text'" class="text-body-1 text-pre-wrap">{{value}}</v-card-text>
+                                <v-img v-else-if="type === 'picture'" :src="value" class="w-100"></v-img>
+                            </v-card>
+
+                            <v-card v-if="!own" flat class="d-flex align-end">
+                                <v-card-text class="px-2 py-0">{{time}}</v-card-text>
+                            </v-card>
+                        </v-sheet>
+
+                        <template v-if="own" #append>
+                            <v-avatar color="grey">
                                 <v-icon color="white">mdi-account</v-icon>
                             </v-avatar>
                         </template>
