--- a/src/client/index.html
+++ b/src/client/index.html
@@ -186,7 +186,7 @@
 
                             <v-card flat rounded="lg" variant="tonal" :color="own ? 'deep-purple-accent-4' : 'orange-darken-4'">
                                 <v-card-text v-if="type === 'text'" class="text-body-1 text-pre-wrap">{{value}}</v-card-text>
-                                <v-img v-else-if="type === 'picture'" :src="value" class="w-100"></v-img>
+                                <v-img v-else-if="type === 'picture'" :src="value" width="256"></v-img>
                             </v-card>
 
                             <v-card v-if="!own" flat class="d-flex align-end">
