fix relative path.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -130,7 +130,7 @@
 
                     notifies.push({
                         color: "error",
-                        message: "通信に失敗しました"
+                        message: "送信できませんでした"
                     });
                 }
             }
