--- a/src/client/index.html
+++ b/src/client/index.html
@@ -189,7 +189,7 @@
                         <div class="d-flex" :class="own ? 'justify-end' : 'justify-start'">
                             <div style="max-width:70%;">
                                 <v-card flat rounded="lg" variant="tonal" :color="own ? 'deep-purple-accent-4' : 'orange-darken-4'">
-                                    <v-card-text v-if="type === 'text'" class="text-body-1 text-pre-wrap">{{value}}</v-card-text>
+                                    <v-card-text v-if="type === 'text'" class="pa-3 text-body-1 text-pre-wrap">{{value}}</v-card-text>
                                     <v-img v-else-if="type === 'picture'" :src="value" width="256"></v-img>
                                 </v-card>
 
