--- a/src/client/index.html
+++ b/src/client/index.html
@@ -66,21 +66,23 @@
     const sfc_layout_footer = defineComponent({
         template: /*html*/`
             <v-footer app class="px-3" color="grey-lighten-3">
-                <v-btn-toggle mandatory density="comfortable" color="primary" v-model="type">
-                    <v-tooltip location="top" text="文章返信モード">
-                        <template #activator="{props}">
-                            <v-btn :="props" icon="mdi-message-text-outline" value="chat"></v-btn>
-                        </template>
-                    </v-tooltip>
+                <v-expand-x-transition>
+                    <v-btn-toggle v-if="!focus" mandatory density="comfortable" color="primary" v-model="type">
+                        <v-tooltip location="top" text="文章返信モード">
+                            <template #activator="{props}">
+                                <v-btn :="props" icon="mdi-message-text-outline" value="chat"></v-btn>
+                            </template>
+                        </v-tooltip>
 
-                    <v-tooltip location="top" text="画像返信モード">
-                        <template #activator="{props}">
-                            <v-btn :="props" icon="mdi-image-outline" value="image"></v-btn>
-                        </template>
-                    </v-tooltip>
-                </v-btn-toggle>
+                        <v-tooltip location="top" text="画像返信モード">
+                            <template #activator="{props}">
+                                <v-btn :="props" icon="mdi-image-outline" value="image"></v-btn>
+                            </template>
+                        </v-tooltip>
+                    </v-btn-toggle>
+                </v-expand-x-transition>
 
-                <v-textarea no-resize hide-details single-line flat clearable density="compact" variant="solo" rows="1" class="mx-3" label="プロンプトを送信" @keyup.alt.enter.exact="requestApi()" v-model="input"></v-textarea>
+                <v-textarea no-resize hide-details single-line flat clearable density="compact" variant="solo" rows="1" class="mx-3" label="プロンプトを送信" @keyup.alt.enter.exact="requestApi()" @focus="focus = true" @blur="focus = false" v-model="input"></v-textarea>
 
                 <v-btn flat density="comfortable" color="transparent" icon="mdi-send" @click="requestApi()"></v-btn>
             </v-footer>
@@ -90,6 +92,7 @@
             const notifies = inject("xg-notifies");
             const threads = inject("xg-threads");
 
+            const focus = ref(false);
             const input = ref("");
             const type = ref("chat");
 
@@ -135,7 +138,7 @@
                 }
             }
 
-            return {input, type, requestApi};
+            return {focus, input, type, requestApi};
         }
     });
 
