--- a/src/www/application/index.html
+++ b/src/www/application/index.html
@@ -24,17 +24,13 @@
 <script async type="module">
     import {createApp, fetchComponent} from "./deps.js";
     import {route} from "./core/route.js";
-    import {store} from "./core/store.js";
     import {vuetify} from "./core/vuetify.js";
-    import {component} from "./core/component.js";
     import {provide} from "./core/provide.js";
 
     const vue = createApp(await fetchComponent("./core/main.vue")());
 
     vue.use(route);
-    vue.use(store);
     vue.use(vuetify);
-    vue.use(component);
     vue.use(provide);
 
     vue.mount("#vue");
@@ -60,6 +56,6 @@
     }
 </style>
 
-<title>Application</title>
+<title>OpenAI API Example</title>
 
 <div id="vue"></div>
