--- a/src/www/application/index.html
+++ b/src/www/application/index.html
@@ -3,7 +3,7 @@
 <meta name="referrer" content="no-referrer">
 <meta name="viewport" content="height=device-height,width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no">
 
-<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='50%' style='dominant-baseline:central;text-anchor:middle;font-size:100px;'>💬</text></svg>">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='50%' style='dominant-baseline:central;text-anchor:middle;font-size:100px;'>🌌</text></svg>">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@3/dist/vuetify.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7/css/materialdesignicons.min.css">
@@ -20,12 +20,12 @@
 
 <script async type="module">
     import {createApp, fetchComponent} from "./deps.js";
-    import {router} from "./core/router.js";
-    import {vuetify} from "./core/vuetify.js";
-    import {component} from "./core/component.js";
-    import {provide} from "./core/provide.js";
+    import {router} from "./sfc/router.js";
+    import {vuetify} from "./sfc/vuetify.js";
+    import {component} from "./sfc/component.js";
+    import {provide} from "./sfc/provide.js";
 
-    const vue = createApp(await fetchComponent("./core/main.vue")());
+    const vue = createApp(await fetchComponent("./sfc/layout/main.vue")());
 
     vue.use(router);
     vue.use(vuetify);
@@ -55,6 +55,6 @@
     }
 </style>
 
-<title>OpenAI API Example</title>
+<title>Application</title>
 
 <div id="vue"></div>
